[package]
name = "rust-sdl2-roguelike-engine"
version = "0.1.0"
authors = ["Ramiro Quintana <jqramiro@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.34"
default-features = false